update: grammar corrections, global css color changes, contactUs spacing and email added, button color changes,

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide 
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -20,14 +20,14 @@ html {
   }
 
   h2 {
-    @apply text-3xl sm:text-4xl
+    @apply text-3xl sm:text-4xl text-[#64B5B0]
   }
 
   li {
     @apply cursor-pointer
   }
 
-  button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
-  }
+  /* button {
+    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#3F4A59] to-[#A3E3C6] text-white
+  } */
 }
